# landline

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  ci.yml.disabled
backend/: Cargo.toml  config.example.toml
backend/src/: audio.rs  audio_device.rs  audit.rs  auth.rs  config.rs  control.rs  gpio.rs  lib.rs  main.rs  rig.rs  routes.rs  security.rs  spectrum.rs  telemetry.rs  ws.rs
backend/tests/: api.rs  audit.rs  auth.rs  control.rs  gpio.rs  rig.rs  security.rs  ws.rs
deploy/: README.md  RUNBOOK.md
deploy/container/: Dockerfile  Dockerfile.dockerignore  README.md  compose.yml
deploy/nginx/: README.md  nginx.conf
deploy/split-host/: README.md
deploy/split-host/wireguard/: backend-host.conf.example  frontend-host.conf.example
deploy/systemd/: landline.service
docs/: README.md  action-list.md  backlog.md  deployment.md  documentation-review.md  governance.md  release-checklist.md  requirements-spec.md  revised-plan.md  roadmap.md  security.md  test-spec.md  user-manual.md
docs/concept/: architecture.md
docs/requirements/: stakeholder-requirements.md  system-requirements.md  vision-and-scope.md
docs/reviews/: loose-ends-audit-2026-07.md
docs/test/: test-strategy.md
frontend/: README.md  index.html  package-lock.json  package.json  styles.css  tsconfig.json
frontend/src/: api.test.ts  api.ts  audio-devices.test.ts  audio-devices.ts  audio-player.test.ts  audio-player.ts  backoff.test.ts  backoff.ts  control.test.ts  control.ts  gpio-panel.ts  main.ts  session.test.ts  session.ts  socket.test.ts  socket.ts  spectrum-client.test.ts  spectrum-client.ts  telemetry-client.test.ts  telemetry-client.ts  waterfall.test.ts  waterfall.ts
scripts/: trace-gate.py
xtask/: Cargo.toml
xtask/src/: main.rs
