# landline — Cargo workspace (Phase 1, action A1).
# Backend service (Axum/Tokio/Tower) plus an `xtask` task runner that promotes
# the traceability gate and CI steps behind `cargo xtask` (action A2).
[workspace]
resolver = "2"
members = ["backend", "xtask"]

[workspace.package]
edition = "2021"
rust-version = "1.94"
license = "AGPL-3.0-only"
authors = ["Simon Keimer (DC0SK)"]
repository = "https://github.com/dc0sk/landline"

# NFR-MAINT-01: the codebase shall pass Clippy (pedantic) without warnings.
# Members opt in with `[lints] workspace = true`; CI/hooks run clippy with
# `-D warnings`, promoting these pedantic warnings to hard errors.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "io-util", "sync"] }
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
# Spectrum/FFT (ARC-06): pure-Rust FFT, keeps the aarch64 cross-build C-free.
rustfft = "6"
tower-http = { version = "0.6", features = ["trace", "limit", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
# Auth (ARC-02): pure-Rust HS256 JWT + argon2 password hashing. Deliberately no
# `jsonwebtoken`/`ring` so the aarch64 cross-build stays C-toolchain-free.
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
argon2 = "0.5"
