[package]
name = "landline-backend"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "landline backend — secure browser-native web remote for amateur-radio transceivers (Axum/Tokio/Tower)."

[lints]
workspace = true

# Binary is named `landline`; the systemd unit (BL-080/A26) will invoke it.
[[bin]]
name = "landline"
path = "src/main.rs"

[lib]
name = "landline_backend"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
