[package]
name = "landline-backend"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "landline backend — secure browser-native web remote for amateur-radio transceivers (Axum/Tokio/Tower)."

[lints]
workspace = true

# Binary is named `landline`; the systemd unit (BL-080/A26) will invoke it.
[[bin]]
name = "landline"
path = "src/main.rs"

[lib]
name = "landline_backend"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
getrandom.workspace = true
argon2.workspace = true
rustfft.workspace = true
opus = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
gpio-cdev = { workspace = true, optional = true }

# Opt-in deployment features. Off by default so the reference aarch64 cross-build
# needs no C toolchain and pulls no extra deps; enable on the Pi build
# (--features audio-device,gpio-device[,opus]).
[features]
opus = ["dep:opus"]
audio-device = ["dep:cpal"]
gpio-device = ["dep:gpio-cdev"]

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
